<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.nasythanugroho.reviewwisatangalam.DetailWisata">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_detail_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/cbntalun"
            android:scaleType="fitXY"/>
        <TextView
            style="@style/TextContent.Subtitle"
            android:text="@string/Lokasi"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"/>
        <TextView
            android:id="@+id/tv_detail_lokasi"
            style="@style/TextContent.Black"
            android:textSize="12sp"
            android:text="@string/content_lokasi_cbntalun"
            android:layout_marginBottom="8dp"/>
        <TextView
            style="@style/TextContent.Subtitle"
            android:text="@string/fasilitas"
            android:layout_marginBottom="8dp"/>
        <TextView
            android:id="@+id/tv_detail_fasilitas"
            style="@style/TextContent"
            android:text="@string/fasilitas_cbntalun"
            android:textSize="12sp"
            android:layout_marginBottom="8dp"
            android:lineSpacingMultiplier="1"
            android:textColor="@android:color/black"/>
        <TextView
            style="@style/TextContent.Subtitle"
            android:text="@string/akses_kendaraan"
            android:layout_marginBottom="8dp"/>
        <TextView
            android:id="@+id/tv_detail_akseskendaraan"
            style="@style/TextContent"
            android:text="@string/content_akseskendaraan_cbntalun"
            android:textSize="12sp"
            android:layout_marginBottom="8dp"
            android:lineSpacingMultiplier="1"
            android:textColor="@android:color/black"/>
        <TextView
            style="@style/TextContent.Subtitle"
            android:text="@string/jam_buka"
            android:layout_marginBottom="8dp"/>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/weekdays"/>
                <TextView
                    android:id="@+id/tv_detail_jamweekdays"
                    style="@style/TextSpec.Value"
                    android:text="@string/content_jamweekdays_cbntalun" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/Weekend"/>
                <TextView
                    android:id="@+id/tv_detail_jamweekend"
                    style="@style/TextSpec.Value"
                    android:text="@string/content_jamweekend_cbntalun" />
            </TableRow>
        </TableLayout>
        <TextView
            style="@style/TextContent.Subtitle"
            android:text="@string/harga_tiket"
            android:layout_marginBottom="8dp"/>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/weekdays"/>
                <TextView
                    android:id="@+id/tv_detail_hargaweekdays"
                    style="@style/TextSpec.Value"
                    android:text="@string/content_hargaweekdays_cbntalun" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/Weekend"/>
                <TextView
                    android:id="@+id/tv_detail_hargaweekend"
                    style="@style/TextSpec.Value"
                    android:text="@string/content_hargaweekend_cbntalun" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/mobil"/>
                <TextView
                    android:id="@+id/tv_detail_hargamobil"
                    style="@style/TextSpec.Value"
                    android:text="@string/content_hargamobil_cbntalun" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/motor"/>
                <TextView
                    android:id="@+id/tv_detail_hargamotor"
                    style="@style/TextSpec.Value"
                    android:text="@string/content_hargamotor_cbntalun" />
            </TableRow>
        </TableLayout>

    </LinearLayout>
</ScrollView>
